--- a/src/components/SignUpPage/SignUpPage.css
+++ b/src/components/SignUpPage/SignUpPage.css
@@ -46,3 +46,11 @@ form{
     outline: none; 
     border-color:lightblue ;
 }
+
+.success-message {
+    color: green;
+}
+
+.error-message {
+    color: red;
+}
