--- a/src/components/DinnerShowPage/DinnerShowPage.css
+++ b/src/components/DinnerShowPage/DinnerShowPage.css
@@ -15,3 +15,21 @@
     align-items: center;
     justify-content: space-between;
 }
+
+#buttons-container {
+    display:flex;
+    justify-content: space-between;
+    width: 100%;
+    padding-top: 8%;
+}
+
+#edit-button{
+    height: 45px;
+    width: 25%;
+    background-color: rgba(128, 128, 128, 0.716);
+}
+
+#delete-button{
+    width: 25%;
+    background-color: rgba(199, 26, 26, 0.447);
+}
