--- a/src/components/SignUpPage/SignUpPage.css
+++ b/src/components/SignUpPage/SignUpPage.css
@@ -6,16 +6,18 @@ h1 {
 
 .action-button {
     background-color: aqua;
-    height: 2rem ;
+    padding: 0.25rem 0.25rem;
     border-radius:  8px;
     width: 100%;
-    transition: all 01.s ease;
+    transition: all 01s ease;
     cursor: pointer;
+    font-size: 1rem;
 }
 
 .action-button:active{ 
 transform: scale(0.98) translateY(1px);
 background-color: #00d4d4;
+
 }
 
 form{
@@ -38,7 +40,6 @@ form{
     border: 1px solid lightgray;
     border-radius: 8px;
     font-size: 1em;
-    /* font-family: inherit; */
     box-sizing: border-box;
 }
 
@@ -49,8 +50,10 @@ form{
 
 .success-message {
     color: green;
+    font-size: 2rem;
 }
 
 .error-message {
     color: red;
+    font-size: 2rem;
 }
