--- a/src/components/DinnerShowPage/DinnerShowPage.css
+++ b/src/components/DinnerShowPage/DinnerShowPage.css
@@ -13,7 +13,8 @@
 #guest-ribbon{
     display:flex;
     align-items: center;
-    justify-content: space-between;
+    text-align: center;
+    flex-direction: column;
 }
 
 #buttons-container {
@@ -21,6 +22,7 @@
     justify-content: space-between;
     width: 100%;
     padding-top: 8%;
+    
 }
 
 #edit-button{
