--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -19,13 +19,16 @@ section {
   border: 2px solid grey;
   border-radius: 8px;
   padding: 15px;
-  width: 140px;  
-  height: 210px;  
+  width: 200px;  
+  height: 300px;  
   transition: all 0.3s ease;
   cursor: pointer;
   overflow: hidden;
   display: flex;
   flex-direction: column;
+}
+.dinner-card p{
+  margin:0;
 }
 
 .dinner-card:hover {
