protected signIn and signUp routes

--- a/src/components/DinnerShowPage/DinnerShowPage.css
+++ b/src/components/DinnerShowPage/DinnerShowPage.css
@@ -17,6 +17,10 @@
     flex-direction: column;
 }
 
+#guest-ribbon p {
+    font-size: 1.5rem;
+}
+
 #buttons-container {
     display:flex;
     justify-content: space-between;
