--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 #root {
-    max-width: 1280px;
+    max-width: 8
+    00px;
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
 }
 
 main{
-    max-width: 600px;
+    max-width: 800px;
     margin: 0 auto;
 }
