--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -16,7 +16,7 @@
     justify-content: space-between;
     max-width: 600px;
     margin: 0 auto;
-    padding: 1rem 0:
+    padding: 1rem 0;
 }
 
 nav {
